profilelist1exp/unpackaged/objects/Agenda_Topic__c.object
<CustomObject>
    <description>BOLT &amp; GSL project</description>
    <fields>
        <fullName>AE_Notes__c</fullName>
        <label>AE Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AE_Questions__c</fullName>
        <label>AE Questions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Catering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Catering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_value_to_customer_relationship__c</fullName>
        <inlineHelpText>Did the content and the discussion add value to the customer relationship and move your customer along in the sales process?</inlineHelpText>
        <label>Add value to customer relationship?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agenda</label>
        <referenceTo>Agenda__c</referenceTo>
        <relationshipLabel>Agenda Topics</relationshipLabel>
        <relationshipName>Agenda_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analyst_Notes__c</fullName>
        <label>Topic Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analyst_Questions__c</fullName>
        <label>Analyst Questions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_additional_Comments_Feedback__c</fullName>
        <inlineHelpText>Please provide any additional comments or feedback on your most recent briefing with this presenter</inlineHelpText>
        <label>Additional comments about Presenter</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Catering_Comments__c</fullName>
        <label>Catering Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Custom Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement__c</fullName>
        <label>Customer Engagement</label>
        <referenceTo>Customer_Engagement__c</referenceTo>
        <relationshipName>Related_Topics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The field is updated in the new design</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Topic_As__c</fullName>
        <inlineHelpText>Enter the custom name for the topic to be displayed on agendas</inlineHelpText>
        <label>Display Topic As</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>The field is updated in the new design.</description>
        <label>Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ending_Time__c</fullName>
        <label>Ending Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00AM</fullName>
                </value>
                <value>
                    <fullName>12:15AM</fullName>
                </value>
                <value>
                    <fullName>12:30AM</fullName>
                </value>
                <value>
                    <fullName>12:45AM</fullName>
                </value>
                <value>
                    <fullName>01:00AM</fullName>
                </value>
                <value>
                    <fullName>01:15AM</fullName>
                </value>
                <value>
                    <fullName>01:30AM</fullName>
                </value>
                <value>
                    <fullName>01:45AM</fullName>
                </value>
                <value>
                    <fullName>02:00AM</fullName>
                </value>
                <value>
                    <fullName>02:15AM</fullName>
                </value>
                <value>
                    <fullName>02:30AM</fullName>
                </value>
                <value>
                    <fullName>02:45AM</fullName>
                </value>
                <value>
                    <fullName>03:00AM</fullName>
                </value>
                <value>
                    <fullName>03:15AM</fullName>
                </value>
                <value>
                    <fullName>03:30AM</fullName>
                </value>
                <value>
                    <fullName>03:45AM</fullName>
                </value>
                <value>
                    <fullName>04:00AM</fullName>
                </value>
                <value>
                    <fullName>04:15AM</fullName>
                </value>
                <value>
                    <fullName>04:30AM</fullName>
                </value>
                <value>
                    <fullName>04:45AM</fullName>
                </value>
                <value>
                    <fullName>05:00AM</fullName>
                </value>
                <value>
                    <fullName>05:15AM</fullName>
                </value>
                <value>
                    <fullName>05:30AM</fullName>
                </value>
                <value>
                    <fullName>05:45AM</fullName>
                </value>
                <value>
                    <fullName>06:00AM</fullName>
                </value>
                <value>
                    <fullName>06:15AM</fullName>
                </value>
                <value>
                    <fullName>06:30AM</fullName>
                </value>
                <value>
                    <fullName>06:45AM</fullName>
                </value>
                <value>
                    <fullName>07:00AM</fullName>
                </value>
                <value>
                    <fullName>07:15AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highly_qualified_presentation_skills__c</fullName>
        <inlineHelpText>Were the presentation skills of the assigned presenter highly qualified?</inlineHelpText>
        <label>Were Presenter skills highly qualified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meal_Quantity__c</fullName>
        <label>Meal Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same as no. of attendees</fullName>
                    <default>true</default>
                    <label>Same as no. of attendees</label>
                </value>
                <value>
                    <fullName>Custom number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Met_account_team_strategic_goals__c</fullName>
        <inlineHelpText>Were the account team strategic goals met by the assigned presenter?</inlineHelpText>
        <label>StrategicGoals met by Assigned Presenter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Attendees__c</fullName>
        <formula>Customer_Engagement__r.No_of_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presenter_Architect_Name__c</fullName>
        <formula>Presenters_Architects__r.Topic_Expert_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter/Architect Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_Feedback__c</fullName>
        <label>Presenter Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presenters_Architects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter/Architect</label>
        <referenceTo>Topic_Experts__c</referenceTo>
        <relationshipLabel>Agenda Topics</relationshipLabel>
        <relationshipName>Agenda_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Meal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select Meal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agenda_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Breaks</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agenda_Content__c</referenceTo>
        <relationshipLabel>Agenda Topics (Select Meal)</relationshipLabel>
        <relationshipName>Select_Meal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Email_to_Presenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email to Presenter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Starting_Time__c</fullName>
        <label>Starting Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00AM</fullName>
                </value>
                <value>
                    <fullName>12:15AM</fullName>
                </value>
                <value>
                    <fullName>12:30AM</fullName>
                </value>
                <value>
                    <fullName>12:45AM</fullName>
                </value>
                <value>
                    <fullName>01:00AM</fullName>
                </value>
                <value>
                    <fullName>01:15AM</fullName>
                </value>
                <value>
                    <fullName>01:30AM</fullName>
                </value>
                <value>
                    <fullName>01:45AM</fullName>
                </value>
                <value>
                    <fullName>02:00AM</fullName>
                </value>
                <value>
                    <fullName>02:15AM</fullName>
                </value>
                <value>
                    <fullName>02:30AM</fullName>
                </value>
                <value>
                    <fullName>02:45AM</fullName>
                </value>
                <value>
                    <fullName>03:00AM</fullName>
                </value>
                <value>
                    <fullName>03:15AM</fullName>
                </value>
                <value>
                    <fullName>03:30AM</fullName>
                </value>
                <value>
                    <fullName>03:45AM</fullName>
                </value>
                <value>
                    <fullName>04:00AM</fullName>
                </value>
                <value>
                    <fullName>04:15AM</fullName>
                </value>
                <value>
                    <fullName>04:30AM</fullName>
                </value>
                <value>
                    <fullName>04:45AM</fullName>
                </value>
                <value>
                    <fullName>05:00AM</fullName>
                </value>
                <value>
                    <fullName>05:15AM</fullName>
                </value>
                <value>
                    <fullName>05:30AM</fullName>
                </value>
                <value>
                    <fullName>05:45AM</fullName>
                </value>
                <value>
                    <fullName>06:00AM</fullName>
                </value>
                <value>
                    <fullName>06:15AM</fullName>
                </value>
                <value>
                    <fullName>06:30AM</fullName>
                </value>
                <value>
                    <fullName>06:45AM</fullName>
                </value>
                <value>
                    <fullName>07:00AM</fullName>
                </value>
                <value>
                    <fullName>07:15AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Topics__r.Select_Subject__r.Name</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agenda_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Topic</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agenda_Content__c</referenceTo>
        <relationshipLabel>Agenda Topics</relationshipLabel>
        <relationshipName>Agenda_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Would_you_recommend_this_presenter__c</fullName>
        <inlineHelpText>Based on your experience during your most recent visit, would you recommend this presenter for other briefings?</inlineHelpText>
        <label>Would you recommend Presenter?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cover_all_talking_points_and_satisfy_the__c</fullName>
        <inlineHelpText>Did the presenter cover all talking points and satisfy the customer needs?</inlineHelpText>
        <label>Did Presenter cover all talking points?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agenda Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Topics</pluralLabel>
    <recordTypes>
        <fullName>Agenda_Topic</fullName>
        <active>true</active>
        <description>Agenda Topic Record</description>
        <label>Agenda Topic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Catering</fullName>
        <active>true</active>
        <description>Catering Record</description>
        <label>Catering</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Additional_comments_Is_Required</fullName>
        <active>true</active>
        <description>Additional comments about Presenter under Rate the Presenter is Required to fill-in when any one of the answers selected is &apos;Neutral&apos; &apos;Disagree&apos; or &apos;Strongly Disagree&apos;</description>
        <errorConditionFormula>AND(Any_additional_Comments_Feedback__c =&apos;&apos;, 
(OR ( 
ISPICKVAL(Met_account_team_strategic_goals__c, &apos;Neutral&apos;), 
ISPICKVAL(Met_account_team_strategic_goals__c, &apos;Disagree&apos;), 
ISPICKVAL(Met_account_team_strategic_goals__c, &apos;Strongly Disagree&apos;), 
ISPICKVAL(Add_value_to_customer_relationship__c, &apos;Neutral&apos;), 
ISPICKVAL(Add_value_to_customer_relationship__c, &apos;Disagree&apos;), 
ISPICKVAL(Add_value_to_customer_relationship__c, &apos;Strongly Disagree&apos;), 
ISPICKVAL(cover_all_talking_points_and_satisfy_the__c, &apos;Neutral&apos;), 
ISPICKVAL(cover_all_talking_points_and_satisfy_the__c, &apos;Disagree&apos;), 
ISPICKVAL(cover_all_talking_points_and_satisfy_the__c, &apos;Strongly Disagree&apos;),
ISPICKVAL(Highly_qualified_presentation_skills__c, &apos;Neutral&apos;), 
ISPICKVAL(Highly_qualified_presentation_skills__c, &apos;Disagree&apos;), 
ISPICKVAL(Highly_qualified_presentation_skills__c, &apos;Strongly Disagree&apos;),
ISPICKVAL(Would_you_recommend_this_presenter__c, &apos;Neutral&apos;), 
ISPICKVAL(Would_you_recommend_this_presenter__c, &apos;Disagree&apos;), 
ISPICKVAL(Would_you_recommend_this_presenter__c, &apos;Strongly Disagree&apos;)
)) 
)</errorConditionFormula>
        <errorMessage>Please Fill-in the ‘Additional comments about Presenter’ in Rate the Presenter Section since one of your Answers were ‘Neutral’ or ‘Disagree’ or ‘Strongly Disagree’</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VerifyAgendaTopicStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNULL( Customer_Engagement__r.Confirmed_Date__c ), 
OR( Start_Date__c &lt; Customer_Engagement__r.GSL_Start_Date__c , Start_Date__c&gt; Customer_Engagement__r.GSL_End_Date__c), 
OR( Start_Date__c &lt; Customer_Engagement__r.Confirmed_Date__c , Start_Date__c&gt; Customer_Engagement__r.Confirmed_End_Date__c))</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>If Confirmed Dates have been added, the topic&apos;s Date has to be within the Confirmed Start Date and End Date range OR if Confirmed Dates have not been added, the topic&apos;s Date must be within the Preferred Start Date and End Date range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VerifyEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
OR( DATEVALUE( End_Time__c )&lt;Customer_Engagement__r.Calendar_Management__r.Start_Date__c ,  DATEVALUE(End_Time__c)&gt; Customer_Engagement__r.Calendar_Management__r.End_Date__c ), End_Time__c &lt; Start_Time__c )</errorConditionFormula>
        <errorMessage>End Date is not in the date range of the CE.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VerifyStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>OR( DATEVALUE( Start_Time__c )&lt; Customer_Engagement__r.Calendar_Management__r.Start_Date__c ,  DATEVALUE(Start_Time__c)&gt; Customer_Engagement__r.Calendar_Management__r.End_Date__c )</errorConditionFormula>
        <errorMessage>If Confirmed Dates have been added, the topic&apos;s Date has to be within the Confirmed Start Date and End Date range OR if Confirmed Dates have not been added, the topic&apos;s Date must be within the Preferred Start Date and End Date range</errorMessage>
    </validationRules>
</CustomObject>